--- a/CosmosDBPartialUpdateTypeConverter.csproj
+++ b/CosmosDBPartialUpdateTypeConverter.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.38.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
